--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,11 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-          
+
       - name: repository name fix
         run: |
-          echo "image_repository_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-          echo "app_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]' | tr -d . | cut -d'/' -f2)" >> $GITHUB_ENV
-      
+          echo "app_name=$(echo ${{ secrets.DOCKERHUB_REPO }} | cut -d'/' -f2)" >> $GITHUB_ENV
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -26,7 +25,7 @@ jobs:
           file: Dockerfile
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.app_name }}:${{ github.event.release.tag_name }}
+          tags: ${{ secrets.DOCKERHUB_REPO }}:${{ github.event.release.tag_name }}
   
   deploy_via_ssh:
     needs: push_to_registry
@@ -38,7 +37,7 @@ jobs:
       - name: repository name fix and env
         run: |
           echo "app_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]' | tr -d . | cut -d'/' -f2)" >> $GITHUB_ENV
-          echo "docker_name=${{ secrets.DOCKERHUB_USERNAME }}" >> $GITHUB_ENV
+          echo "image_repo=${{ secrets.DOCKERHUB_REPO }}" >> $GITHUB_ENV
           echo "domain=${{ secrets.DEPLOY_HOST }}" >> $GITHUB_ENV
           echo "letsencrypt_email=${{ secrets.LETSENCRYPT_EMAIL }}" >> $GITHUB_ENV
 
@@ -46,7 +45,7 @@ jobs:
         uses: danielr1996/envsubst-action@1.0.0
         env:
           RELEASE_VERSION: ${{ github.event.release.tag_name }}
-          IMAGE_REPO: ${{ env.docker_name }}/${{ env.app_name }}
+          IMAGE_REPO: ${{ env.image_repo }}
           HOST_DOMAIN: ${{ env.domain }}
           LETSENCRYPT_EMAIL: ${{ env.letsencrypt_email }}
         with:
