--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,7 +79,7 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_KEY }}
           port: ${{ secrets.DEPLOY_PORT }}
-          envs: APPTOKEN,USERNAME,HUB_USERNAME
+          envs: TOKEN,USERNAME,HUB_USERNAME
           script: |
             echo $TOKEN | docker login --username HUB_USERNAME --password-stdin
             docker-compose -f ~/deploy/HubVanilla-docker-compose.yml up -d
