--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,5 +81,5 @@ jobs:
           port: ${{ secrets.DEPLOY_PORT }}
           envs: APPTOKEN,USERNAME,HUB_USERNAME
           script: |
-            echo $APPTOKEN | docker login --username HUB_USERNAME --password-stdin
+            echo $APPTOKEN | docker login --username $HUB_USERNAME --password-stdin
             docker-compose -f ~/deploy/HubVanilla-docker-compose.yml up -d
